--- a/Informe1/informe/informe.tex
+++ b/Informe1/informe/informe.tex
@@ -318,7 +318,13 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 \subsection{Configuración de Red}
 \subsubsection{Red NAT}
 	En VirtualBox, este es el modo de red por defecto en las nuevas máquinas virtuales. Cuando el sistema operativo invitado inicia, típicamente utiliza DHCP para obtener una dirección IP. VirtualBox alineará esta petición DHCP y le comunicará al SO invitado su dirección IP asignada y la puerta de enlace para el enrutamiento de las conecciones salientes. En este modo, cada máquina virtual es asignada a la misma dirección IP (10.0.2.15) porque cada una de estas piensa que están en su propia red aislada. Y cuando estas envían su tráfico a través de la puerta de enlace (10.0.2.2), VirtualBox reescribe los paquetes para hacerlos parecer que fueron enviados desde el Host, en vez del SO invitado (dentro del Host o huésped).
-	Esto significa que el SO invitado, funcionará incluso si el Host se mueve desde una red a otra (como un notebook moviéndose en distintas ubicaciones), y desde conexiones inalámbricas a conexiones cableadas también.
+	Esto significa que el SO invitado, funcionará incluso si el Host se mueve desde una red a otra (como un notebook moviéndose en distintas ubicaciones), y desde conexiones inalámbricas a conexiones cableadas también. Lógicamente, una red de este tipo de ve de esta forma:
+
+	\begin{figure}[ht]
+	\center
+	\includegraphics[width=0.5\linewidth]{../ss/nat-network.png} 
+	\caption{Esquema de una red NAT}
+	\end{figure}
 
 
 \subsubsection{Red bridge}
@@ -328,10 +334,17 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 
 	\begin{figure}[ht]
 	\center
-	\includegraphics[width=0.75\linewidth]{../ss/MIN/bridge/bridge-mv-min.png} 
+	\includegraphics[width=0.5\linewidth]{../ss/MIN/bridge/bridge-mv-min.png}
 	\end{figure}
 
-	El efecto en esto es que cada MV tiene acceso a la red física en la misma forma que el host. Puede acceder cualquier servicio en la red como por ejemplo servicios DHCP externos, servicios de búsqueda de nombre e información de ruteo, tal como el host lo hace. Lógicamente la red se ve de esta forma: 
+	El efecto en esto es que cada MV tiene acceso a la red física en la misma forma que el host. Puede acceder cualquier servicio en la red como por ejemplo servicios DHCP externos, servicios de búsqueda de nombre e información de ruteo, tal como el host lo hace. Lógicamente la red se ve de esta forma:
+
+	\begin{figure}[ht]
+	\center
+	\includegraphics[width=0.75\linewidth]{../ss/bridge-network.png} 
+	\caption{Esquema de una red bridge} 
+	\end{figure}
+
 
 \section{Referencias}
 	\begin{itemize}
