--- a/Informe1/informe/informe.tex
+++ b/Informe1/informe/informe.tex
@@ -76,7 +76,7 @@
 
 
 \section{Descripción}
-Mediante el software de virtualización VirtualBox, se crearán dos máquinas virtuales de la distribución de Linux CentOS 6.5 x86, en su versión desktop y minimal (sin entorno gráfico). Para ambas versiones, se registrará su tiempo de instalación, uso de recursos, y además de configurar una red NAT y otra bridge dentro de ellas.   
+Mediante el software de virtualización VirtualBox, se crearán dos máquinas virtuales de la distribución de Linux CentOS 6.5 x86, en su versión desktop (full) y minimal (sin entorno gráfico). Para ambas versiones, se registrará su tiempo de instalación, uso de recursos, y además de configurar una red NAT y otra bridge dentro de ellas.   
 
 \section{Análisis y Desarrollo}
 \subsection{Instalación}
@@ -87,10 +87,10 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			          \raggedright
 			          \adjustbox{valign=t}{
-			            \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/primera.png}
+			            \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/primera.png}
 			          }
 			          \medskip
-			          \\Del menú de inicio, seleccionar la primera opción, instalar o actualizar un sistema existente.
+			          \\Luego de iniciar la máquina virtual, en el menú de inicio, seleccionar la primera opción, instalar o actualizar un sistema existente.
 			    \end{minipage}
 			
 			\item Puesto que se trata de un máquina virtual, omitir el chequeo de los dispositivos de DVD o usb.
@@ -101,7 +101,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			          \raggedright
 			          \adjustbox{valign=t}{
-			            \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/diskN.png}
+			            \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/diskN.png}
 			          }
 			          \medskip
 			          \\En caso de contar con dispositivos de almacenamiento especializados como iSCSI, SAN, etc, marcar la segunda opción, sino, la primera es la que se elige. Dar en siguiente.
@@ -113,7 +113,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			          \raggedright
 			          \adjustbox{valign=t}{
-			            \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/red.png}
+			            \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/red.png}
 			          }
 			          \medskip
 			          \\Dar click en el boton \textbf{Configure la red}. Seleccionar la interfas System eth0.
@@ -123,7 +123,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			          \raggedright
 			          \adjustbox{valign=t}{
-			            \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/red2.png}
+			            \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/red2.png}
 			          }
 			          \medskip
 			          \\Posteriormente, dar click en editar y marcar el checkbox \textbf{Conectar automáticamente}. Dar click a Aplicar. Luego hacer click en Cerrar y después Siguiente.
@@ -133,7 +133,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			          \raggedright
 			          \adjustbox{valign=t}{
-			            \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/huso.png}
+			            \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/huso.png}
 			          }
 			          \medskip
 			          \\Elegir la zona horaria, dependiendo de la ubicación geográfica. Siguiente. 
@@ -144,7 +144,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			          \raggedright
 			          \adjustbox{valign=t}{
-			            \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/particion.png}
+			            \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/particion.png}
 			          }
 			          \medskip
 			          \\Proceso de particionado del disco virtual. Elegir usar todo el espacio. Siguiente. 
@@ -156,7 +156,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/instalacion.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/instalacion.png}
 			        }
 			        \medskip
 			        \\Comienza el proceso de instalación. 
@@ -166,7 +166,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/fin.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/fin.png}
 			        }
 			        \medskip
 			        \\Instalación finalizada. Reiniciar. 
@@ -176,21 +176,11 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		   		\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/MIN/instalacion/uname.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/MIN/uname.png}
 			        }
 			        \medskip
 			        \\Tipear el nombre de usuario root y su contraseña. Listo. 
-		        \end{minipage}	
-
-		    \item 
-		    	\begin{minipage}[t]{\linewidth}
-			        \raggedright
-			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/MIN/rendimiento/top.png}
-			        }
-			        \medskip
-			        \\Comando top, para visualizar la utilización de recursos del sistema. 
-		        \end{minipage}
+		        \end{minipage}			   
 		\end{enumerate}
 
 	\subsubsection{CentOS desktop version}	
@@ -199,17 +189,17 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 				\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/boot-menu.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/boot-menu.png}
 			        }
 			        \medskip
-			        \\Del menú de inicio, seleccionar la opción \textbf{Boot} o iniciar. 
+			        \\Luego de iniciar la máquina virtual, en el menú de inicio, seleccionar la opción \textbf{Boot} o iniciar. 
 		        \end{minipage}
 
 		    \item
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/desktop.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/desktop.png}
 			        }
 			        \medskip
 			        \\Dentro del escritorio, hacer doble click sobre el ícono \textbf{Install to Hard Drive}. 
@@ -221,7 +211,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/almacenamiento.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/almacenamiento.png}
 			        }
 			        \medskip
 			        \\En caso de contar con dispositivos de almacenamiento especializados como iSCSI, SAN, etc, marcar la segunda opción, sino, la primera es la que se elige. Dar en siguiente. 
@@ -233,7 +223,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/root-password.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/root-password.png}
 			        }
 			        \medskip
 			        \\Suministrar la contraseña del usuario root. Confirmar. Siguiente. 
@@ -243,7 +233,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/particion.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/particion.png}
 			        }
 			        \medskip
 			        \\Proceso de particionado del disco virtual. Elegir usar todo el espacio. Siguiente. 
@@ -253,7 +243,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/instalacion.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/instalacion.png}
 			        }
 			        \medskip
 			        \\Instalación del sistema Se copian todos los archivos necesarios al disco virtual. 
@@ -263,7 +253,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/setup.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/setup.png}
 			        }
 			        \medskip
 			        \\Proceso de configuración post instalación. Siguiente. 
@@ -273,7 +263,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/licencia.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/licencia.png}
 			        }
 			        \medskip
 			        \\Leer y aceptar acuerdo de licencia. Siguiente. 
@@ -287,7 +277,7 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 		    	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/login.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/login.png}
 			        }
 			        \medskip
 			        \\Después de reiniciado el sistema, se presentará la pantalla de login para iniciar sesión. 
@@ -297,60 +287,66 @@ Las imágenes iso, fueron descargadas del repositorio de la Universidad, \url{ft
 	        	\begin{minipage}[t]{\linewidth}
 			        \raggedright
 			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/instalacion/CentOS.png}
+			        \includegraphics[width=.45\linewidth]{screenshots/instalacion/FULL/CentOS.png}
 			        }
 			        \medskip
 			        \\Después de iniciar sesión, se presentará el escritorio de CentOS 6.5 Desktop.
 		        \end{minipage}
-
-		    \item
-	        	\begin{minipage}[t]{\linewidth}
-			        \raggedright
-			        \adjustbox{valign=t}{
-			        \includegraphics[width=.45\linewidth]{screenshots/FULL/rendimiento/top.png}
-			        }
-			        \medskip
-			        \\Comando top, para visualizar la utilización de recursos del sistema.
-		        \end{minipage}
+		    
 		    \end{enumerate}
 
 		    
 \subsection{Rendimiento}
-Respecto del consumo de recursos de ambos sistemas, se podía anticipar con certeza que, CentOS en su versión mínima, es más eficiente que en su versión de escritorio, dado que, entre otras diferencias, la versión mínima no cuenta con un entorno de escritorio gráfico como Gnome. Es así como CentOS mínimo, ocupa alrededor de $91.744 [MB]$ de memoria principal; en cambio CentOS desktop ocupa alrededor de $336.208 [MB]$ de memoria principal. Respecto del espacio requerido en el disco duro virtual, para la instalación del sistema operativo, se tiene lo siguiente: 
+Respecto del consumo de recursos de ambos sistemas, se podía anticipar con certeza que, CentOS en su versión mínima, es más eficiente que en su versión de escritorio, dado que, entre otras diferencias, la versión mínima no cuenta con un entorno de escritorio gráfico como Gnome. Es así como CentOS mínimo, ocupa alrededor de $91.744 [MB]$ de memoria principal; en cambio CentOS desktop ocupa alrededor de $336.208 [MB]$ de memoria principal. Respecto del espacio requerido en el disco duro virtual, para la instalación del sistema operativo, se tiene que en la versión mínima, la partición raíz (``/''), con un espacio disponible de $8.7 [GB]$, ocupa $728 [MB]$ equivalentes al 9\% del total de la partición; en cambio la version desktop, con un partición raíz del mismo tamaño, ocupa $4.8 [GB]$ equivalentes al 58\% de esta.  
+
+\textbf{Screenshots de los comandos \textit{top}, \textit{df} y \textit{free} ejecutados en consola, se encuentran dentro del directorio \textit{screenshots/rendimiento}, divididos por versión del SO CentOS.}
 
 
 \subsection{Configuración de Red}
 \subsubsection{Red NAT}
-En VirtualBox, este es el modo de red por defecto en las nuevas máquinas virtuales. Cuando el sistema operativo invitado inicia, típicamente utiliza DHCP para obtener una dirección IP. VirtualBox alineará esta petición DHCP y le comunicará al SO invitado su dirección IP asignada y la puerta de enlace para el enrutamiento de las conexiones salientes. En este modo, cada máquina virtual es asignada a la misma dirección IP (\textbf{10.0.2.15}) porque cada una de estas piensa que están en su propia red aislada. Y cuando estas envían su tráfico a través de la puerta de enlace (10.0.2.2), VirtualBox reescribe los paquetes para hacerlos parecer que fueron enviados desde el Host, en vez del SO invitado (dentro del Host o huésped).
-Esto significa que el SO invitado, funcionará incluso si el Host se mueve desde una red a otra (como un notebook moviéndose en distintas ubicaciones), y desde conexiones inalámbricas a conexiones cableadas también. Lógicamente, una red de este tipo de ve de esta forma:
+En VirtualBox, este es el modo de red por defecto en las nuevas máquinas virtuales. Cuando el sistema operativo invitado inicia, típicamente utiliza DHCP para obtener una dirección IP. VirtualBox alineará esta petición DHCP y le comunicará al OS invitado su dirección IP asignada y la puerta de enlace para el enrutamiento de las conexiones salientes. En este modo, cada máquina virtual es asignada a la misma dirección IP (\textbf{10.0.2.15}) porque cada una de estas piensa que están en su propia red aislada. Y cuando estas envían su tráfico a través de la puerta de enlace (10.0.2.2), VirtualBox reescribe los paquetes para hacerlos parecer que fueron enviados desde el Host, en vez del OS invitado (dentro del Host o huésped).
+Esto significa que el OS invitado, funcionará incluso si el Host se mueve desde una red a otra (como un notebook moviéndose en distintas ubicaciones), y desde conexiones inalámbricas a conexiones cableadas también. La estructura lógica de una red de este tipo, se ve de la siguiente forma:
+
 
 	\begin{figure}[ht]
 	\center
-	\includegraphics[width=0.5\linewidth, height=5cm]{screenshots/nat-network.png} 
+	\includegraphics[width=0.5\linewidth, height=5cm]{screenshots/networking/nat/nat-network.png} 
 	\caption{Esquema de una red NAT}
 	\end{figure}
 
-\clearpage
-
 \subsubsection{Red bridge}
-	Redes tipo bridge son usadas cuando se quiere que la máquina virtual sea un miembro completo de la red, i.e. que se comporte igual que la máquina huésped en la red.
+	Redes tipo bridge son usadas cuando se quiere que la máquina virtual sea un miembro completo de la red, i.e. que se comporte igual que la máquina huésped en la red. En este modo, un NIC virtual es ``puenteado'' a un NIC físico en el host, de la siguiente forma:
 
-	En este modo, un NIC virtual es ``puenteado'' a un NIC físico en el host, de la siguiente forma:
+	\clearpage
 
 	\begin{figure}[ht]
 	\center
-	\includegraphics[width=0.5\linewidth]{screenshots/MIN/bridge/bridge-mv-min.png}
+	\includegraphics[width=0.5\linewidth]{screenshots/networking/bridge/MIN/bridge-mv-min.png}
+	\caption{Ventana de configuración de red de VirtualBox.}
 	\end{figure}
 
-	El efecto en esto es que cada MV tiene acceso a la red física en la misma forma que el host. Puede acceder cualquier servicio en la red como por ejemplo servicios DHCP externos, servicios de búsqueda de nombre e información de ruteo, tal como el host lo hace. Lógicamente la red se ve de esta forma:
+	El efecto en esto es que cada MV tiene acceso a la red física en la misma forma que el host. Puede acceder cualquier servicio en la red como por ejemplo servicios DHCP externos, servicios de búsqueda de nombre e información de ruteo, tal como el host lo hace. La estructura lógica de la red, se ve de esta forma:
 
 	\begin{figure}[ht]
 	\center
-	\includegraphics[width=0.75\linewidth]{screenshots/bridge-network.png} 
+	\includegraphics[width=0.75\linewidth]{screenshots/networking/bridge/bridge-network.png} 
 	\caption{Esquema de una red bridge} 
 	\end{figure}
 
-En el caso de la presente tarea, con ambas máquinas virtuales corriendo simultaneamente, estas obtienen su dirección IP desde el servicio DHCP de la Universidad. Es así como la versión mínima de CentOS, obtuvo una dirección IP igual a \textbf{10.6.229.163}. En cambio la versión desktop, una dirección IP igual a \textbf{10.6.229.163}. Nótese la diferencia cuando se tenían configuradas, ambas máquinas virtuales con NAT, donde estas tenían la misma dirección IP (\textbf{10.0.2.15}).
+En el caso de la presente tarea, con ambas máquinas virtuales corriendo simultaneamente, estas obtienen su dirección IP desde el servicio DHCP de la Universidad. Es así como la versión mínima de CentOS, obtuvo una dirección IP igual a \textbf{10.6.229.163}. En cambio la versión desktop, una dirección IP igual a \textbf{10.6.229.163}. Nótese la diferencia cuando se tenían configuradas, ambas máquinas virtuales con NAT, donde estas tenían la misma dirección IP (\textbf{10.0.2.15}), dada por la máquina host.
+
+\subsection{Archivos de configuración de red}
+Los archivos de configuración de red, son principalmente:
+\begin{itemize}
+	\item \textbf{/etc/hosts} el principal propósito de este archivo es resolver los nombres de host que no pueden ser resueltos de ninguna otra forma. También puede ser usado para resolver los nombres de host en redes pequeñas que no cuentan con un servidor DNS. A pesar del tipo de red en la cual el computador se encuentra, este archivo debería contener una linea especificando la dirección IP del dispositivo loopback (\textbf{127.0.0.1}) como \textbf{localhost.localdomain}.
+
+	\item \textbf{/etc/resolv.conf} Este archivo especifica la dirección IP de los servidores DNS y el dominio de búsqueda. A menos que haya sido configurado de otra manera, los scripts de inicialización de red, llenan este archivo. 
+
+	\item \textbf{/etc/sysconfig/network-scripts/ifcfg-[nombre-interfaz]} Para cada interfaz, hay un correspondiente script de configuración de interfaz. Cada uno de estos archivos provee información específica de una interfaz de red en particular. En el caso de la presente tarea, el nombre de la interfaz utilizada es \textbf{eth0}.
+\end{itemize}
+
+\textbf{Screenshots de los archivos de configuración mencionados anteriormente, se encuentran dentro del directorio \textit{screenshots/networking}, separados por tipo de red (bridge o NAT) y luego por versión del SO CentOS.}
+
 
 \section{Referencias}
 	\begin{itemize}
